add italian switch to eng pages

--- a/en/index.html
+++ b/en/index.html
@@ -50,7 +50,10 @@
 						class="menu-link">Registration</a></li>
 				<li><a href="about" class="menu-link">About</a></li>
 				<li><a href="contact-us" class="menu-link">Contact</a></li>
-				<li><a href="/" class="language-switch menu-link">SI / IT</i></a>
+				<li>
+					<a href="/" class="language-switch menu-link">SI</a>
+					<span>/</span>					
+					<a href="/it" class="language-switch menu-link">IT</a>
 				</li>
 			</ul>
 		</div>
