--- a/en/races/go3v-28km.html
+++ b/en/races/go3v-28km.html
@@ -51,6 +51,11 @@
 				<li><a href="/en/about" class="menu-link">About</a></li>
 				<li><a href="/en/contact-us" class="menu-link">Contact</a></li>
 				<li><a href="/sl/proge/go3v-28km" class="language-switch menu-link">SI</a>
+				<li>
+					<a href="/sl/proge/go3v-28km" class="language-switch menu-link">SI</a>
+					<span>/</span>
+					<a href="/it/gare/go3v-28km" class="language-switch menu-link">IT</a>
+				</li>
 			</ul>
 		</div>
 	</header>
