--- a/en/races/index.html
+++ b/en/races/index.html
@@ -48,7 +48,11 @@
 						class="menu-link">Registration</a></li>
 				<li><a href="/en/about" class="menu-link">About</a></li>
 				<li><a href="/en/contact-us" class="menu-link">Contact</a></li>
-				<li><a href="/sl/proge" class="language-switch menu-link">SI</a></li>
+				<li>
+					<a href="/sl/proge" class="language-switch menu-link">SI</a>
+					<span>/</span>
+					<a href="/it/gare" class="language-switch menu-link">IT</a>
+				</li>
 			</ul>
 		</div>
 	</header>
@@ -65,7 +69,6 @@
 				</div>
 			</div>
 		</section>
-		<!--section-A-->
 		<!--section-A-->
 		<section class="section-a flex-item">
 			<ul class="image-grid">
