--- a/en/races/ultra-58km.html
+++ b/en/races/ultra-58km.html
@@ -49,6 +49,11 @@
 				<li><a href="/en/about" class="menu-link">About</a></li>
 				<li><a href="/en/contact-us" class="menu-link">Contact</a></li>
 				<li><a href="/sl/proge/ultra-58km" class="language-switch menu-link">SI</a>
+				<li>
+					<a href="/sl/proge/ultra-58km" class="language-switch menu-link">SI</a>
+					<span>/</span>
+					<a href="/it/gare/ultra-58km" class="language-switch menu-link">IT</a>
+				</li>
 			</ul>
 		</div>
 	</header>
@@ -57,11 +62,8 @@
 		<!--Showcase image-->
 		<section>
 			<div class="showcase-image">
-				<img src="../../assets/images/showcase-12-m.jpg" 
-					srcset="../../assets/images/showcase-12-m.jpg 650w,
-					../../assets/images/showcase-12.jpg 750w"
-					sizes="100vw"
-					alt="Tek treh vrhov - Počasna a drzna ultra 58 km"
+				<img src="../../assets/images/showcase-12-m.jpg" srcset="../../assets/images/showcase-12-m.jpg 650w,
+					../../assets/images/showcase-12.jpg 750w" sizes="100vw" alt="Tek treh vrhov - Počasna a drzna ultra 58 km"
 					class="image-center">
 				<div class="text-wrap grid">
 					<span class="showcase-title content-wrap">
