--- a/en/about.html
+++ b/en/about.html
@@ -49,7 +49,10 @@
 						class="menu-link">Registration</a></li>
 				<li><a href="about" class="menu-link">About</a></li>
 				<li><a href="contact-us" class="menu-link">Contact</a></li>
-				<li><a href="/sl/o-nas" class="language-switch menu-link">SI</a>
+				<li>
+					<a href="/sl/o-nas" class="language-switch menu-link">SI</a>
+					<span>/</span>					
+					<a href="/it/chi-siamo" class="language-switch menu-link">IT</a>
 				</li>
 			</ul>
 		</div>
