--- a/en/faq.html
+++ b/en/faq.html
@@ -48,7 +48,10 @@
 						class="menu-link">Registration</a></li>
 				<li><a href="about" class="menu-link">About</a></li>
 				<li><a href="contact-us" class="menu-link">Contact</a></li>
-				<li><a href="/sl/info" class="language-switch menu-link">SI</a>
+				<li>
+					<a href="/sl/info" class="language-switch menu-link">SI</a>
+					<span>/</span>					
+					<a href="/it/informazioni" class="language-switch menu-link">IT</a>
 				</li>
 			</ul>
 		</div>
