--- a/en/races/go1v-12km.html
+++ b/en/races/go1v-12km.html
@@ -48,6 +48,11 @@
 				<li><a href="/en/about" class="menu-link">About</a></li>
 				<li><a href="/en/contact-us" class="menu-link">Contact</a></li>
 				<li><a href="/sl/proge/go1v-12km" class="language-switch menu-link">SI</a>
+				<li>
+					<a href="/sl/proge/go1v-12km" class="language-switch menu-link">SI</a>
+					<span>/</span>
+					<a href="/it/gare/go1v-12km" class="language-switch menu-link">IT</a>
+				</li>
 			</ul>
 		</div>
 	</header>
