--- a/en/races/gorica-run.html
+++ b/en/races/gorica-run.html
@@ -48,8 +48,11 @@
 						class="menu-link">Registration</a></li>
 				<li><a href="/en/about" class="menu-link">About</a></li>
 				<li><a href="/en/contact-us" class="menu-link">Contact</a></li>
-				<li><a href="/sl/proge/goriski-tek" class="language-switch menu-link">SI <i
-							class="fas fa-globe"></i></a>
+				<li>
+					<a href="/sl/proge/goriski-tek" class="language-switch menu-link">SI</a>
+					<span>/</span>
+					<a href="/it/gare/goriski-tek" class="language-switch menu-link">IT</a>
+				</li>
 			</ul>
 		</div>
 	</header>
