add en/sl sqitches to ita pages

--- a/it/contatti.html
+++ b/it/contatti.html
@@ -49,7 +49,11 @@
 						class="menu-link">Iscrizioni</a></li>
 				<li><a href="chi-siamo" class="menu-link">Chi siamo</a></li>
 				<li><a href="contatti" class="menu-link">Contatti</a></li>
-				<li><a href="/sl/kontakt" class="language-switch menu-link">SI</a></li>
+				<li>
+					<a href="/sl/kontakt" class="language-switch menu-link">SI</a>
+					<span>/</span>					
+					<a href="/en/contact-us" class="language-switch menu-link">EN</a>
+				</li>
 			</ul>
 		</div>
 	</header>
