--- a/it/gare/go1v-12km.html
+++ b/it/gare/go1v-12km.html
@@ -47,7 +47,11 @@
 						class="menu-link">Iscrizioni</a></li>
 				<li><a href="/it/chi-siamo" class="menu-link">Chi siamo</a></li>
 				<li><a href="/it/contatti" class="menu-link">Contatti</a></li>
-				<li><a href="/sl/proge/go1v-12km" class="language-switch menu-link">SI</a>
+				<li>
+					<a href="/sl/proge/go1v-12km" class="language-switch menu-link">SI</a>
+					<span>/</span>					
+					<a href="/en/races/go1v-12km" class="language-switch menu-link">EN</a>
+				</li>
 			</ul>
 		</div>
 	</header>
