--- a/it/gare/goriski-tek.html
+++ b/it/gare/goriski-tek.html
@@ -48,8 +48,11 @@
 						class="menu-link">Iscrizioni</a></li>
 				<li><a href="/it/chi-siamo" class="menu-link">Chi siamo</a></li>
 				<li><a href="/it/contatti" class="menu-link">Contatti</a></li>
-				<li><a href="/sl/proge/goriski-tek" class="language-switch menu-link">SI <i
-							class="fas fa-globe"></i></a>
+				<li>
+					<a href="/sl/proge/goriski-tek" class="language-switch menu-link">SI</a>
+					<span>/</span>					
+					<a href="/en/races/goriski-tek" class="language-switch menu-link">EN</a>
+				</li>
 			</ul>
 		</div>
 	</header>
