--- a/it/informazioni.html
+++ b/it/informazioni.html
@@ -48,7 +48,10 @@
 						class="menu-link">Iscrizioni</a></li>
 				<li><a href="chi-siamo" class="menu-link">Chi siamo</a></li>
 				<li><a href="contatti" class="menu-link">Contatti</a></li>
-				<li><a href="/sl/info" class="language-switch menu-link">SI</a>
+				<li>
+					<a href="/sl/info" class="language-switch menu-link">SI</a>
+					<span>/</span>					
+					<a href="/en/faq" class="language-switch menu-link">EN</a>
 				</li>
 			</ul>
 		</div>
