--- a/it/chi-siamo.html
+++ b/it/chi-siamo.html
@@ -49,7 +49,10 @@
 						class="menu-link">Iscrizioni</a></li>
 				<li><a href="chi-siamo" class="menu-link">Chi siamo</a></li>
 				<li><a href="contatti" class="menu-link">Contatti</a></li>
-				<li><a href="/sl/o-nas" class="language-switch menu-link">SI</a>
+				<li>
+					<a href="/sl/o-nas" class="language-switch menu-link">SI</a>
+					<span>/</span>					
+					<a href="/en/about" class="language-switch menu-link">EN</a>
 				</li>
 			</ul>
 		</div>
