--- a/it/gare/go3v-28km.html
+++ b/it/gare/go3v-28km.html
@@ -38,8 +38,6 @@
 				<i class="fas fa-bars" id="menu-button"></i>
 			</button>
 		</div>
-
-
 		<!--Menu content-->
 		<div id="menu">
 			<a id="close-button">&times;</a>
@@ -50,7 +48,11 @@
 						class="menu-link">Iscrizioni</a></li>
 				<li><a href="/it/chi-siamo" class="menu-link">Chi siamo</a></li>
 				<li><a href="/it/contatti" class="menu-link">Contatti</a></li>
-				<li><a href="/sl/proge/go3v-28km" class="language-switch menu-link">SI</a>
+				<li>
+					<a href="/sl/proge/go3v-28km" class="language-switch menu-link">SI</a>
+					<span>/</span>					
+					<a href="/en/races/go3v-28km" class="language-switch menu-link">EN</a>
+				</li>
 			</ul>
 		</div>
 	</header>
