--- a/it/gare/index.html
+++ b/it/gare/index.html
@@ -48,7 +48,11 @@
 						class="menu-link">Iscrizioni</a></li>
 				<li><a href="/it/chi-siamo" class="menu-link">Chi siamo</a></li>
 				<li><a href="/it/contatti" class="menu-link">Contatti</a></li>
-				<li><a href="/sl/proge" class="language-switch menu-link">SI</a></li>
+				<li>
+					<a href="/sl/proge" class="language-switch menu-link">SI</a>
+					<span>/</span>
+					<a href="/en/races" class="language-switch menu-link">EN</a>
+				</li>
 			</ul>
 		</div>
 	</header>
