--- a/it/gare/ultra-58km.html
+++ b/it/gare/ultra-58km.html
@@ -48,7 +48,11 @@
 						class="menu-link">Iscrizioni</a></li>
 				<li><a href="/it/chi-siamo" class="menu-link">Chi siamo</a></li>
 				<li><a href="/it/contatti" class="menu-link">Contatti</a></li>
-				<li><a href="/sl/proge/ultra-58km" class="language-switch menu-link">SI</a>
+				<li>
+					<a href="/sl/proge/ultra-58km" class="language-switch menu-link">SI</a>
+					<span>/</span>					
+					<a href="/en/races/ultra-58km" class="language-switch menu-link">EN</a>
+				</li>
 			</ul>
 		</div>
 	</header>
