--- a/it/index.html
+++ b/it/index.html
@@ -50,7 +50,10 @@
 						class="menu-link">Iscrizioni</a></li>
 				<li><a href="chi-siamo" class="menu-link">Chi siamo</a></li>
 				<li><a href="contatti" class="menu-link">Contatti</a></li>
-				<li><a href="/" class="language-switch menu-link">SI</a>
+				<li>
+					<a href="/" class="language-switch menu-link">SI</a>
+					<span>/</span>					
+					<a href="/en" class="language-switch menu-link">EN</a>
 				</li>
 			</ul>
 		</div>
