translate index it

--- a/it/gare/index.html
+++ b/it/gare/index.html
@@ -31,7 +31,7 @@
 	<!--Navigation bar-->
 	<header id="navigation-bar">
 		<div class="home-container">
-			<a href="/en" id="logo">T3V</a>
+			<a href="/it" id="logo">T3V</a>
 		</div>
 		<div class="menu-icon-container">
 			<button class="menu-icon" data-target="menu">
@@ -81,7 +81,7 @@
 				<li id="race-1">
 					<a href="./goriski-tek">
 						<div class="card-content">
-							<h1 class="card-title">Gorica run</h1>
+							<h1 class="card-title">Goriški tek</h1>
 							<p> 4, 10 in 15 km |
 								Charity run
 							</p>
