--- a/it/gare/ultra-58km.html
+++ b/it/gare/ultra-58km.html
@@ -32,7 +32,7 @@
 	<!--Navigation bar-->
 	<header id="navigation-bar">
 		<div class="home-container">
-			<a href="/en" id="logo">T3V</a> </div>
+			<a href="/it" id="logo">T3V</a> </div>
 		<div class="menu-icon-container">
 			<button class="menu-icon" data-target="menu">
 				<i class="fas fa-bars" id="menu-button"></i>
