--- a/it/index.html
+++ b/it/index.html
@@ -53,7 +53,7 @@
 				<li>
 					<a href="/" class="language-switch menu-link">SI</a>
 					<span>/</span>					
-					<a href="/en" class="language-switch menu-link">EN</a>
+					<a href="/it" class="language-switch menu-link">EN</a>
 				</li>
 			</ul>
 		</div>
@@ -90,10 +90,10 @@
 		<!--section-B-->
 		<section class="section-b grid">
 			<div class="content-wrap center">
-				<h1 class="content-title">A Race Between the Past and the Future</h1>
+				<h1 class="content-title">Correre tra il passato e il futuro</h1>
 				<p class="landing-page-text">
-					Mt. Sabotin, Mt. Škabrijel and Sveta Gora are central to our event. Hillsides that used to seperate
-					people are uniting us today. We marked three trails over these summits. It's time to choose yours.
+					Vi proponiamo 3 gare che si svolgono lungo i sentieri del Sabotino, Montesanto e San Gabriele. I sentieri che una volta separavano i popoli adesso li uniscono. Tre magnifiche gare, per tutti i gusti: hai già scelto la tua?
+
 				</p>
 			</div>
 		</section>
@@ -104,9 +104,9 @@
 				<li id="race-1">
 					<a href="./gare/goriski-tek">
 						<div class="card-content">
-							<h1 class="card-title">Gorica run</h1>
+							<h1 class="card-title">Goriški tek</h1>
 							<p> 4, 10 in 15 km |
-								Charity run
+								corsa di beneficenza 
 							</p>
 						</div>
 					</a>
@@ -144,12 +144,11 @@
 		<!--section-C-->
 		<section class="section-c grid center">
 			<div class="content-wrap about">
-				<p>Check-out our
-					<a href="informazioni">Info</a> and
-					<a href="chi-siamo">Chi siamo</a>
-					sections to learn more chi-siamo the race.
-					Still couldn't find what you're looking for?
-					<br><a href="contatti">Send us an email</a>. We are here for you.
+				<p>Vuoi saperne di più sull'evento?
+					Fai clic su 
+					<a href="informazioni">informazioni</a> o
+					<a href="chi-siamo">leggi di più su di noi</a>.
+					<br><a href="contatti">Contattaci</a> e saremo felici di risponderti.
 				</p>
 				<div class="icon-container">
 					<a href="https://www.instagram.com/go4trail/" target="_blank" rel="noopener noreferrer" class="icon"
