--- a/it/informazioni.html
+++ b/it/informazioni.html
@@ -31,7 +31,7 @@
 	<!--Navigation bar-->
 	<header id="navigation-bar">
 		<div class="home-container">
-			<a href="/en" id="logo">T3V</a>
+			<a href="/it" id="logo">T3V</a>
 		</div>
 		<div class="menu-icon-container">
 			<button class="menu-icon" data-target="menu">
@@ -83,7 +83,7 @@
 						<ul class="inner  top-padding">
 							<li>
 								<p>Go1V, Go3V and Počasna a drzna ultra will start at Solkan Kayak Center. Start of the
-									Gorica run will be on Bevk Square in Nova Gorica. </p>
+									Goriški tek will be on Bevk Square in Nova Gorica. </p>
 							</li>
 						</ul>
 					</li>
@@ -91,7 +91,7 @@
 					<li>
 						<a class="toggle" href="javascript:void(0);">When will the races start?</a>
 						<ul class="inner  top-padding">
-							<p>Gorica run will take place on 3th October at 10.00 am. The majority of races (Go1V, Go3V
+							<p>Goriški tek will take place on 3th October at 10.00 am. The majority of races (Go1V, Go3V
 								and Počasna a drzna ultra) will take place on 10th October at 7.00 am (Počasna a drzna
 								ultra), 9.00 am (Go3V) and 9.30 (Go1V). </p>
 						</ul>
