--- a/it/chi-siamo.html
+++ b/it/chi-siamo.html
@@ -32,7 +32,7 @@
 	<!--Navigation bar-->
 	<header id="navigation-bar">
 		<div class="home-container">
-			<a href="/en" id="logo">T3V</a>
+			<a href="/it" id="logo">T3V</a>
 		</div>
 		<div class="menu-icon-container">
 			<button class="menu-icon" data-target="menu">
