translate info it

--- a/en/faq.html
+++ b/en/faq.html
@@ -108,7 +108,7 @@
 					<li>
 						<a class="toggle" href="javascript:void(0);">To which category do I belong?</a>
 						<ul class="inner  top-padding">
-							<p> The results will be split in men and women section as well as along three age groups: 18
+							<p> Every runner belongs to either men or women category as well as to one of the three age groups: 18
 								to 35 years (2002 - 1985), 36 to 50 years (1984 - 1970) 51 years and more (1969 and
 								earlier).
 							</p>
