--- a/it/informazioni.html
+++ b/it/informazioni.html
@@ -79,61 +79,57 @@
 			<div class="content-wrap">
 				<ul class="accordian top-padding">
 					<li>
-						<a class="toggle" href="javascript:void(0);">Where will the races start?</a>
+						<a class="toggle" href="javascript:void(0);">Dov'è la partenza? </a>
 						<ul class="inner  top-padding">
 							<li>
-								<p>Go1V, Go3V and Počasna a drzna ultra will start at Solkan Kayak Center. Start of the
-									Goriški tek will be on Bevk Square in Nova Gorica. </p>
+								<p>Go1V, Go3V e Počasna a drzna ultra 58 km: partenza dal Centro Kayak di Solkan-Salcano, il 10.10.2020. 
+									Corsa Goriški tek: partenza da Bevkov Trg, nel centro di Nova Gorica, il 3.10.2020 </p>
 							</li>
 						</ul>
 					</li>
 
 					<li>
-						<a class="toggle" href="javascript:void(0);">When will the races start?</a>
+						<a class="toggle" href="javascript:void(0);">Quando è la partenza?</a>
 						<ul class="inner  top-padding">
-							<p>Goriški tek will take place on 3th October at 10.00 am. The majority of races (Go1V, Go3V
-								and Počasna a drzna ultra) will take place on 10th October at 7.00 am (Počasna a drzna
-								ultra), 9.00 am (Go3V) and 9.30 (Go1V). </p>
-						</ul>
-					</li>
-					<li>
-						<a class="toggle" href="javascript:void(0);">Where can I register?</a>
-						<ul class="inner  top-padding">
-							<p> You can easily register through our <a href="https://sportotime.com/eng/event/1171"
-									target="_blank" rel="noopener noreferrer">website</a>. Fees depend on the time of
-								your registration. You can find more information under each race.
+							<p>3.10.2020 ore 10.00, partenza Goriški tek. <br>
+								10.10.2020 partenze: Go1V (ore 7.00), Go3V ore (9.00) e Počasna a drzna ultra 58 km (ore 9.00).
 							</p>
 						</ul>
 					</li>
 					<li>
-						<a class="toggle" href="javascript:void(0);">To which category do I belong?</a>
+						<a class="toggle" href="javascript:void(0);">Iscrizioni</a>
 						<ul class="inner  top-padding">
-							<p> The results will be split in men and women section as well as along three age groups: 18
-								to 35 years (2002 - 1985), 36 to 50 years (1984 - 1970) 51 years and more (1969 and
-								earlier).
+							<p> Puoi iscriverti <a href="https://sportotime.com/eng/event/1171" target="_blank" rel="noopener noreferrer">qui</a>. La quota cambia in base al momento dell'iscrizione. I prezzi sono pubblicati sotto ogni gara.
 							</p>
 						</ul>
 					</li>
 					<li>
-						<a class="toggle" href="javascript:void(0);">Where can I see the results?</a>
+						<a class="toggle" href="javascript:void(0);">Categorie</a>
 						<ul class="inner  top-padding">
-							<p> The results from 2019 are available on <a
+							<p> I concorrenti saranno classificati in base alla posizione assoluta nelle categorie maschili e femminili. I concorrenti saranno inoltre classificati in tre categorie di età: dai 18 ai 35 anni (2002 - 1985), dai 36 ai 50 anni (1984 - 1970) e dai 51 anni in poi (1969 e precedenti).
+							</p>
+						</ul>
+					</li>
+					<li>
+						<a class="toggle" href="javascript:void(0);">Risultati</a>
+						<ul class="inner  top-padding">
+							<p> Dei risultati nel 2019: <a
 									href="https://www.sportotime.com/eng/event/964" target="_blank"
 									rel="noopener noreferrer">sporttotime</a>.
 							</p>
 						</ul>
 					</li>
 					<li>
-						<a class="toggle" href="javascript:void(0);">Who organises Tek treh vrhov?</a>
+						<a class="toggle" href="javascript:void(0);">Organizzazione della gara</a>
 						<ul class="inner  top-padding">
-							<p> Tek treh vrhov is organised by <a href="https://www.sz-ng.si" target="_blank"
+							<p> Organizzatore: <a href="https://www.sz-ng.si" target="_blank"
 									rel="noopener noreferrer">Javni zavod za šport Nova Gorica</a>, Bazoviška 4, 5000
 								Nova Gorica.
 							</p>
 						</ul>
 					</li>
 					<li>
-						<a class="toggle" href="javascript:void(0);">General conditions</a>
+						<a class="toggle" href="javascript:void(0);">Regolamento</a>
 						<ul class="inner  top-padding">
 							<li>1. Udeleženci so nezgodno zavarovani pri Zavarovalnici Sava.</li>
 							<li>2. Tekači morajo biti vso pot na uradni progi. Odgovornost vsakega tekača je, da pozna
