translate about and contacts in ita

--- a/it/chi-siamo.html
+++ b/it/chi-siamo.html
@@ -77,12 +77,9 @@
 		<!--section-D-->
 		<section class="section-d grid flex-item">
 			<div class="content-wrap">
-				<p class="main-text">Tek treh vrhov (T3V) started as all good things do. With a group of friends doing
-					together what they like the most. We love to run. Especially when the trail goes uphill. That is why
-					we decided to bring you a unique running experience. From the picturesque ridge of Mt. Sabotin and
-					forest paths on Mt. Škabrijel to the cavern of Sveta Gora and stunning views of the Soča river. We
-					wanted to capture the diversity that our homeground has to offer. And what better way to experience
-					it than by going on a journey across three summits.</p>
+				<p class="main-text">La Corsa della tre cime (T3V) è iniziata, come tutte le cose belle, dalla condivisione di una passione comune di un gruppo di amici, uniti dalla gioia di correre lungo i sentieri del nostro territorio. Ecco perché abbiamo deciso di offrirti un'esperienza di corsa unica:
+					I percorsi sono stati disegnati lungo la cresta panoramica del Sabotino, dal quale potrai godere del verde smeraldo caratteristico dell’Isonzo-Soča, attraverso i sentieri forestali del monte San Gabriele e attraverso la galleria del Montesanto. Il nostro obiettivo è stato quello di catturare in pochi km tutta la varietà del nostro territorio ... e così è nata la Corsa delle tre cime.	
+				</p>
 			</div>
 		</section>
 
