--- a/it/contatti.html
+++ b/it/contatti.html
@@ -51,7 +51,7 @@
 				<li><a href="contatti" class="menu-link">Contatti</a></li>
 				<li>
 					<a href="/sl/kontakt" class="language-switch menu-link">SI</a>
-					<span>/</span>					
+					<span>/</span>
 					<a href="/en/contact-us" class="language-switch menu-link">EN</a>
 				</li>
 			</ul>
@@ -77,14 +77,13 @@
 		<!--section-C-->
 		<section class="section-c grid flex-item">
 			<div class="content-wrap">
-				<p class="opening">We'd love to hear from you.</p>
 				<form id="contact-form" action="https://getform.io/f/80864511-72cb-4a68-99ef-a2fef0de680a"
 					method="POST">
-					<input type="text" name="name" id="name" placeholder="Full name" class="input-field">
-					<input type="email" name="email" id="email" placeholder="Your e-mail" class="input-field">
-					<input type="text" name="subject" id="subjcet" placeholder="Subject" class="input-field">
-					<textarea name="message" id="message" rows=8 placeholder="Message" class="input-field"></textarea>
-					<button type=submit id="submit-button">Send your message</button>
+					<input type="text" name="name" id="name" placeholder="Nome" class="input-field">
+					<input type="email" name="email" id="email" placeholder="E-mail" class="input-field">
+					<input type="text" name="subject" id="subjcet" placeholder="Tema" class="input-field">
+					<textarea name="message" id="message" rows=8 placeholder="Messaggio" class="input-field"></textarea>
+					<button type=submit id="submit-button">Inviare il messaggio</button>
 				</form>
 			</div>
 		</section>
