translate go1v ita

--- a/it/contatti.html
+++ b/it/contatti.html
@@ -77,6 +77,7 @@
 		<!--section-C-->
 		<section class="section-c grid flex-item">
 			<div class="content-wrap">
+				<p class="opening">Contattaci e saremo lieti di rispondere alle vostre domande.</p>
 				<form id="contact-form" action="https://getform.io/f/80864511-72cb-4a68-99ef-a2fef0de680a"
 					method="POST">
 					<input type="text" name="name" id="name" placeholder="Nome" class="input-field">
