--- a/it/gare/go1v-12km.html
+++ b/it/gare/go1v-12km.html
@@ -76,40 +76,40 @@
 		<!--section-D-->
 		<section class="section-d grid flex-item">
 			<div class="content-wrap">
-				<p class="opening">This year Go1V takes you to the summit of Sveta Gora.</p>
+				<p class="opening">Go1V quest'anno si svolge sui sentieri del Montesanto </p>
 				<ul class="info-container">
-					<li>Distance: <b>12 km</b></li>
-					<li>Elevation: <b>700 m</b></li>
-					<li>Refreshment stations: <b>3</b></li>
-					<li>Date: <b>10th October 2020</b></li>
-					<li>Start: <b>9.30</b>, <i>Solkan Kayak Center</i></li>
+					<li>Distanza: <b>12 km</b></li>
+					<li>Dislivello: <b>700 m</b></li>
+					<li>Punti di ristoro: <b>3</b></li>
+					<li>Data della gara: <b>10 ottobre 2020</b></li>
+					<li>Partenza: <b>9.30</b>, <i>Centro Kayak Solkan - Salcano
+					</i></li>
 				</ul>
 
 				<p class="top-padding">
 					Download <a href="/assets/gpx/Go1V_12km.gpx.zip">GPX 12 km</a>
 				</p>
 
-				<h2>Obligatory equipment</h2>
+				<h2>Materiale obbligatorio</h2>
 				<ul class="equipment">
-					<li>1. Race number (fully visible)</li>
-					<li>2. Water bottle (camel bag, bottle, soft flask etc.)</li>
-					<li>3. Mobile phone (silent mode)</li>
-					<li class="small-text">* Additional gear might be announced on our Facebook few days before the
-						event.</li>
+					<li>1. Pettorale (ben visibile)</li>
+					<li>2. Bicchiere o ecotazza</li>
+					<li>3. Telefono cellulare</li>
+					<li class="small-text">* Vi invitiamo a seguire la pagina <a href="https://www.facebook.com/trail3v.eu/" target="_blank" rel="noopener noreferrer">Facebook</a> per gli aggiornamenti meteo prima della gara, in quanto potrebbero essere fortemente consigliati pantaloni lunghi, giacca in goretex e guanti.
+					</li>
 				</ul>
 
-				<h2>Entry fee</h2>
+				<h2>Quote di iscrizione</h2>
 				<ul class="price">
-					<li>until 1st July 2020: <b>15 €</b></li>
-					<li>until 30th September 2020: <b>20 €</b></li>
-					<li>until the day of the event: <b>25 €</b></li>
-					<li class="small-text">* If registrations are not filled up you can register on the day of the
-						event. In this case we cannot guarantee you will receive a gift pack.</li>
+					<li>fino 1 luglio 2020: <b>15 €</b></li>
+					<li>fino 30th settembre 2020: <b>20 €</b></li>
+					<li>fino al giorno della gara: <b>25 €</b></li>
+					<li class="small-text">* In caso di posti liberi, sarà possibile registrarsi il giorno dell'evento, ma in questo caso non possiamo fornire il pacco gara.</li>
 				</ul>
 
 				<ul class="accordian top-padding">
 					<li>
-						<a class="toggle" href="javascript:void(0);">+ General conditions</a>
+						<a class="toggle" href="javascript:void(0);">+ Regolamento</a>
 						<ul class="inner  top-padding">
 							<li>1. Udeleženci so nezgodno zavarovani pri Zavarovalnici Sava.</li>
 							<li>2. Tekači morajo vso pot biti na uradni progi. Odgovornost vsakega tekača je, da pozna
