--- a/it/gare/index.html
+++ b/it/gare/index.html
@@ -74,16 +74,14 @@
 		<section class="section-a flex-item">
 			<ul class="image-grid">
 				<li class="content-wrap">
-					<p class="opening">Are you a seasoned trail runner, a weekend warior or just eager to try
-						something new? We' ve got you
-						covered! Check out the races we have prepared for you.</p>
+					<p class="opening">Sei un corridore esperto, un corridore amatoriale o stai solo cercando nuove esperienze? C'è una gara adatta a tutti voi! Dai un'occhiata ai percorsi che abbiamo preparato per te.</p>
 				</li>
 				<li id="race-1">
 					<a href="./goriski-tek">
 						<div class="card-content">
 							<h1 class="card-title">Goriški tek</h1>
 							<p> 4, 10 in 15 km |
-								Charity run
+								corsa di beneficenza 
 							</p>
 						</div>
 					</a>
