translate 58 and goriski tek ita

--- a/it/gare/go1v-12km.html
+++ b/it/gare/go1v-12km.html
@@ -80,9 +80,9 @@
 				<ul class="info-container">
 					<li>Distanza: <b>12 km</b></li>
 					<li>Dislivello: <b>700 m</b></li>
-					<li>Punti di ristoro: <b>3</b></li>
+					<li>Ristori <b>3</b></li>
 					<li>Data della gara: <b>10 ottobre 2020</b></li>
-					<li>Partenza: <b>9.30</b>, <i>Centro Kayak Solkan - Salcano
+					<li>Partenza: <b>9.30</b>, <i>Centro Kayak Solkan (Salcano)
 					</i></li>
 				</ul>
 
@@ -146,8 +146,8 @@
 
 				<div class="center top-padding">
 					<a href="https://sportotime.com/eng/race/3578" target="_blank" rel="noopener noreferrer"
-						class="btn">REGISTER NOW</a>
-					<p class="top-padding">Or check out other <a href="/it/gare">gare</a>.
+						class="btn">ISCRIVITI</a>
+					<p class="top-padding">Guardare altre <a href="/it/gare">gare</a>.
 				</div>
 			</div>
 		</section>
