--- a/it/gare/go3v-28km.html
+++ b/it/gare/go3v-28km.html
@@ -76,60 +76,58 @@
 		<!--section-D-->
 		<section class="section-d grid flex-item">
 			<div class="content-wrap">
-				<p class="opening">A race for running enthusiasts looking for a challenge. Go3V trail will lead you over
-					the summit of Mt. Škabrijel and through the cavern of Sveta Gora. Finally, you will take a raft over
-					the Soča river and reach the ridge of Mt. Sabotin.</p>
+				<p class="opening">Il percorso per chi desidera affrontare una sfida impegnativa: Go3V ti porta sulla cima del monte San Gabriele, ti fa passare attraverso la galleria del Montesanto e attraversare il fiume Isonzo-Soca con il gommone. L’ultimo monte a essere affrontato sarà il Sabotino.
+				</p>
 
 				<ul class="info-container">
-					<li>Distance: <b>28 km</b></li>
-					<li>Elevation: <b>1675 m</b></li>
-					<li>Refreshment stations: <b>6</b></li>
-					<li>Date: <b>10th October 2020</b></li>
-					<li>Start: <b>9.00</b>, <i>Solkan Kayak Center</i></li>
+					<li>Distanza: <b>28 km</b></li>
+					<li>Dislivello: <b>1675 m</b></li>
+					<li>Ristori: <b>6</b></li>
+					<li>Data della gara: <b>10 ottobre 2020</b></li>
+					<li>Partenza: <b>9.00</b>, <i>Centro Kayak Solkan (Salcano)
+					</i></li>
 				</ul>
 
 				<p class="top-padding">
 					Download <a href="/assets/gpx/Go3V_28km.gpx.zip">GPX 28 km</a>
 				</p>
 
-				<h2>Time limit</h2>
+				<h2>Cancelli orari</h2>
 				<ul class="equipment">
-					<li><b>13.00</b> Solkan Kayak Center (16km / 4 hours)</li>
-					<li><b>16.00</b> Finish line (7 hours)</li>
+					<li><b>13.00</b> Centro Kayak Solkan (Salcano) (16km / 4 ore)</li>
+					<li><b>16.00</b> Fine gara (7 ore)</li>
 				</ul>
 
-				<h2>Obligatory equipment</h2>
+				<h2>Materiale obbligatorio </h2>
 				<ul class="equipment">
-					<li>1. Race number (fully visible)</li>
-					<li>2. Water bottle (camel bag, bottle, soft flask etc.)</li>
-					<li>3. Eko cup (refreshment stations don't serve plastic cups)</li>
-					<li>4. Mobile phone (silent mode)</li>
-					<li>5. Emergency blanket</li>
-					<li>6. First aid kit</li>
-					<li>7. Wind jacket</li>
-					<li>8. Headlamp</li>
-					<li class="small-text">* Additional gear might be announced on our Facebook few days before the
-						event.</li>
-				</ul>
-
-				<h2>Recommended equipment</h2>
-				<ul class="equipment">
-					<li>1. Trekking poles</li>
-					<li>2. Energy gels (marked with runner's race number)</li>
-				</ul>
-
-				<h2>Entry fee</h2>
-				<ul class="price">
-					<li>until 1st July 2020: <b>20 €</b></li>
-					<li>until 30th September 2020: <b>29 €</b></li>
-					<li>until the day of the event: <b>45 €</b></li>
-					<li class="small-text">* If registrations are not filled up you can register on the day of the
-						event. In this case we cannot guarantee you will receive a gift pack.
+					<li>1. Pettorale ( ben visibile)</li>
+					<li>2. Serbatoio d'acqua(camel bag, bottle, soft flask itd.)</li>
+					<li>3. Ecotazza o recipiente per bere (bicchieri non sono presenti ai ristori)</li>
+					<li>4. Telefono cellulare</li>
+					<li>5. Coperta termica (foglio isotermico di emergenza)</li>
+					<li>6. Kit di pronto soccorso</li>
+					<li>7. Giacca antivento</li>
+					<li>8. Pila frontale o torcia con batterie cariche</li>
+					<li class="small-text">* Vi invitiamo a seguire la pagina <a href="https://www.facebook.com/trail3v.eu/" target="_blank" rel="noopener noreferrer">Facebook</a> per gli aggiornamenti meteo prima della gara, in quanto potrebbero essere fortemente consigliati pantaloni lunghi, giacca in goretex e guanti.
 					</li>
+				</ul>
+
+				<h2>Materiale consigliato</h2>
+				<ul class="equipment">
+					<li>1. Bastoncini</li>
+					<li>2. Barrete e gel (su cui dovrà essere scritto il numero del pettorale)</li>
+				</ul>
+
+				<h2>Quote di iscrizione</h2>
+				<ul class="price">
+					<li>fino 1 luglio 2020: <b>20 €</b></li>
+					<li>fino 30th settembre 2020: <b>29 €</b></li>
+					<li>fino al giorno della gara: <b>45 €</b></li>
+					<li class="small-text">* In caso di posti liberi, sarà possibile registrarsi il giorno dell'evento, ma in questo caso non possiamo fornire il pacco gara.</li>
 				</ul>
 				<ul class="accordian top-padding">
 					<li>
-						<a class="toggle" href="javascript:void(0);">+ General conditions</a>
+						<a class="toggle" href="javascript:void(0);">+ Regolamento</a>
 						<ul class="inner  top-padding">
 							<li>1. Udeleženci so nezgodno zavarovani pri Zavarovalnici Sava.</li>
 							<li>2. Tekači morajo biti vso pot na uradni progi. Odgovornost vsakega tekača je, da pozna
@@ -177,8 +175,8 @@
 
 				<div class="center top-padding">
 					<a href="https://sportotime.com/eng/race/3579/race_registration" target="_blank"
-						rel="noopener noreferrer" class="btn">REGISTER NOW</a>
-					<p class="top-padding">Or check out other <a href="/it/gare">gare</a>.
+						rel="noopener noreferrer" class="btn">ISCRIVITI</a>
+					<p class="top-padding">Guardare altre <a href="/it/gare">gare</a>.
 					</p>
 				</div>
 			</div>
