--- a/it/gare/goriski-tek.html
+++ b/it/gare/goriski-tek.html
@@ -66,7 +66,7 @@
 					class="image-top">
 				<div class="text-wrap grid">
 					<span class="showcase-title content-wrap">
-						8th Gorica Run and Walk for Hope
+						Goriški tek in hoja upanja
 					</span>
 				</div>
 			</div>
@@ -74,21 +74,21 @@
 		<!--section-D-->
 		<section class="section-d grid flex-item">
 			<div class="content-wrap">
-				<p class="opening">Charity run co-organised with <a href="http://www.ko-rak.si/" target="_blank"
+				<!-- <p class="opening">Charity run co-organised with <a href="http://www.ko-rak.si/" target="_blank"
 						rel="noopener noreferrer">ko-Rak society</a>, which organises various preventive programmes
-					dealing with cancer.</p>
+					dealing with cancer.</p> -->
 
 				<ul class="info-container">
-					<li>Distance: <b>4 km, 10 km in 15</b></li>
-					<li>Date: <b>3th October 2020</b></li>
-					<li>Start: <b>10.30</b>, <i>Bevk Square Nova Gorica</i></li>
+					<li>Distanza: <b>4 km, 10 km in 15</b></li>
+					<li>Data della gara: <b>3 ottobre 2020</b></li>
+					<li>Partenza: <b>10.30</b>, <i>Bevkov Trg, nel centro di Nova Gorica</i></li>
 				</ul>
 
-				<h2>Entry fee</h2>
+				<h2>Quote di iscrizione</h2>
 				<ul class="price">
-					<li>until 1st July 2020: <b>8 €</b></li>
-					<li>until the day of the event: <b>10 €</b></li>
-					<li class="small-text">* Entry fees will be donated to charity.</li>
+					<li>fino 1 luglio 2020: <b>8 €</b></li>
+					<li>fino al giorno della gara: <b>10 €</b></li>
+					<li class="small-text">* La quota di iscrizione sarà devoluto in beneficenza.</li>
 				</ul>
 
 				<ul class="accordian top-padding">
@@ -113,8 +113,8 @@
 
 				<div class="center top-padding">
 					<a href="https://sportotime.com/eng/event/1171" target="_blank" rel="noopener noreferrer"
-						class="btn">REGISTER NOW</a>
-					<p class="top-padding">Or check out other <a href="/it/gare">gare</a>.
+						class="btn">ISCRIVITI</a>
+					<p class="top-padding">Guardare altre <a href="/it/gare">gare</a>.
 					</p>
 				</div>
 			</div>
