--- a/it/gare/ultra-58km.html
+++ b/it/gare/ultra-58km.html
@@ -77,66 +77,61 @@
 		<!--section-D-->
 		<section class="section-d grid flex-item">
 			<div class="content-wrap">
-				<p class="opening">Ultra race for experienced runners eager to test themselves on our longest trail. You
-					will cross the summits of Mt. Škabrijel, Sveta Gora, Mt. Korada and Mt. Sabotin.</p>
+				<p class="opening">La nostra prova più dura ti condurrà attraverso Il monte San Gabriele e Monte Santo fino a Kanal, da dove si salirà sul monte Korada, da lì poi si arriverà sul Sabotino e quindi all’arrivo a Salcano.</p>
 
 				<ul class="info-container">
-					<li>Distance: <b>58 km</b></li>
-					<li>Elevation: <b>2864 m</b></li>
-					<li>Refreshment stations: <b>6</b></li>
-					<li>Water stations: <b>3</b></li>
-					<li>Date: <b>10th October 2020</b></li>
-					<li>Start: <b>7.00</b>, <i>Solkan Kayak Center</i></li>
+					<li>Distanza: <b>58 km</b></li>
+					<li>Dislivello: <b>2864 m</b></li>
+					<li>Ristori: <b>6</b></li>
+					<li>Stazioni di acqua: <b>3</b></li>
+					<li>Data della gara: <b>10 ottobre 2020</b></li>
+					<li>Start: <b>7.00</b>, <i>Centro Kayak Solkan (Salcano)</i></li>
 				</ul>
 
 				<p class="top-padding">
 					Download <a href="/assets/gpx/Ultra_58km.gpx.zip">GPX 58 km</a>
 				</p>
 
-				<h2>Time limit</h2>
+				<h2>Cancelli orari</h2>
 				<ul class="equipment">
-					<li><b>13.30</b> Kanal (30km / 6 hours 30 minutes)</li>
-					<li><b>17.00</b> Vrhovlje (45km / 10 hours) - the ridge on Mt. Sabotin will be closed and the
-						runners will take a bypass. Those who take a bypass cannot finish ahead of the runners who ran
-						on the ridge.</li>
-					<li><b>19.00</b> Finish line (58 km / 12 hours)</li>
-					<li class="small-text">* In case of bad weather and dangerous conditions the organiser can close the
-						ridge on Mt. Sabotin. Runners would have to take the bypass to avoid the ridge completely.
+					<li><b>13.30</b> Kanal (30km / 6 hours 30 minuti)</li>
+					<li><b>17.00</b> Vrhovlje (45km / 10 ore) - dopo le 17 il sentiero di cresta verso il Sabotino viene chiuso e i concorrenti possono continuare lungo la "tangenziale". Al traguardo, tutti i concorrenti che sono stati deviati lungo la tangenziale saranno classificati dietro a quelli che hanno percorso il sentiero di cresta verso il Sabotino. </li>
+					<li><b>19.00</b> Fine gara (58 km / 12 ore)</li>
+					<li class="small-text">* In caso di maltempo e condizioni pericolose per i concorrenti, l'organizzazione si riserva la facoltà di deviare la gara lungo la "tangenziale" verso il Sabotino, evitando così la cresta di Sabotino.
 					</li>
 				</ul>
 
-				<h2>Obligatory equipment</h2>
+				<h2>Materiale obbligatorio</h2>
 				<ul class="equipment">
 					<li>1. Race number (fully visible)</li>
-					<li>2. Water bottle (camel bag, bottle, soft flask etc.)</li>
-					<li>3. Eko cup (refreshment stations don't serve plastic cups)</li>
-					<li>4. Mobile phone (silent mode)</li>
-					<li>5. Emergency blanket</li>
-					<li>6. First aid kit</li>
-					<li>7. Wind jacket</li>
-					<li>8. Headlamp with spare batteries</li>
-					<li class="small-text">* Additional gear might be announced on our Facebook few days before the
-						event.</li>
-				</ul>
-
-				<h2>Recommended equipment</h2>
-				<ul class="equipment">
-					<li>1. Trekking poles</li>
-					<li>2. Energy gels (marked with runner's race number)</li>
-				</ul>
-
-				<h2>Entry fee</h2>
-				<ul class="price">
-					<li>until 1st July 2020: <b>40 €</b></li>
-					<li>until 30th September 2020: <b>49 €</b></li>
-					<li>until the day of the event: <b>65 €</b></li>
-					<li class="small-text">* If registrations are not filled up you can register on the day of the
-						event. In this case we cannot guarantee you will receive a gift pack.
+					<li>2. Serbatoio d'acqua(camel bag, bottle, soft flask itd.)</li>
+					<li>3. Ecotazza o recipiente per bere (bicchieri non sono presenti ai ristori)</li>
+					<li>4. Telefono cellulare</li>
+					<li>5. Coperta termica (foglio isotermico di emergenza)</li>
+					<li>6. Kit di pronto soccorso</li>
+					<li>7. Giacca antivento</li>
+					<li>8. Pila frontale o torcia con batterie cariche</li>
+					<li class="small-text">* Vi invitiamo a seguire la pagina <a href="https://www.facebook.com/trail3v.eu/" target="_blank" rel="noopener noreferrer">Facebook</a> per gli aggiornamenti meteo prima della gara, in quanto potrebbero essere fortemente consigliati pantaloni lunghi, giacca in goretex e guanti.
 					</li>
 				</ul>
+
+				<h2>Materiale consigliato</h2>
+				<ul class="equipment">
+					<li>1. Bastoncini</li>
+					<li>2. Barrete e gel (su cui dovrà essere scritto il numero del pettorale)</li>
+				</ul>
+
+				<h2>Quote di iscrizione</h2>
+				<ul class="price">
+					<li>fino 1 luglio 2020: <b>40 €</b></li>
+					<li>fino 30th settembre 2020: <b>49 €</b></li>
+					<li>fino al giorno della gara: <b>65 €</b></li>
+					<li class="small-text">* In caso di posti liberi, sarà possibile registrarsi il giorno dell'evento, ma in questo caso non possiamo fornire il pacco gara.</li>
+				</ul>
+				
 				<ul class="accordian top-padding">
 					<li>
-						<a class="toggle" href="javascript:void(0);">+ General conditions</a>
+						<a class="toggle" href="javascript:void(0);">+ Regolamento</a>
 						<ul class="inner  top-padding">
 							<li>1. Udeleženci so nezgodno zavarovani pri Zavarovalnici Sava.</li>
 							<li>2. Tekači morajo biti vso pot na uradni progi. Odgovornost vsakega tekača je, da pozna
@@ -184,8 +179,8 @@
 
 				<div class="center top-padding">
 					<a href="https://sportotime.com/eng/race/3580/race_registration" target="_blank"
-						rel="noopener noreferrer" class="btn">REGISTER NOW</a>
-					<p class="top-padding">Or check out other <a href="/it/gare">gare</a>.
+						rel="noopener noreferrer" class="btn">ISCRIVITI</a>
+					<p class="top-padding">Guardare altre <a href="/it/gare">gare</a>.
 					</p>
 				</div>
 			</div>
