fix broken paths and typos

--- a/en/races/go1v-12km.html
+++ b/en/races/go1v-12km.html
@@ -47,7 +47,6 @@
 						class="menu-link">Registration</a></li>
 				<li><a href="/en/about" class="menu-link">About</a></li>
 				<li><a href="/en/contact-us" class="menu-link">Contact</a></li>
-				<li><a href="/sl/proge/go1v-12km" class="language-switch menu-link">SI</a>
 				<li>
 					<a href="/sl/proge/go1v-12km" class="language-switch menu-link">SI</a>
 					<span>/</span>
@@ -146,7 +145,7 @@
 				</ul>
 
 				<div class="center top-padding">
-					<a href="https://sportotime.com/eng/race/3578" target="_blank" rel="noopener noreferrer"
+					<a href="https://sportotime.com/eng/race/3578/race_registration" target="_blank" rel="noopener noreferrer"
 						class="btn">REGISTER NOW</a>
 					<p class="top-padding">Or check out other <a href="/en/races">races</a>.
 				</div>
