--- a/it/chi-siamo.html
+++ b/it/chi-siamo.html
@@ -45,7 +45,7 @@
 			<ul class="menu-content">
 				<li><a href="informazioni" class="menu-link">Info</a></li>
 				<li><a href="gare" class="menu-link" id="races-button">Gare</a></li>
-				<li><a href="https://sportotime.com/eng/event/1171" target="_blank" rel="noopener noreferrer"
+				<li><a href="https://sportotime.com/ita/evento/1171" target="_blank" rel="noopener noreferrer"
 						class="menu-link">Iscrizioni</a></li>
 				<li><a href="chi-siamo" class="menu-link">Chi siamo</a></li>
 				<li><a href="contatti" class="menu-link">Contatti</a></li>
