--- a/it/gare/goriski-tek.html
+++ b/it/gare/goriski-tek.html
@@ -44,14 +44,14 @@
 			<ul class="menu-content">
 				<li><a href="/it/informazioni" class="menu-link">Info</a></li>
 				<li><a href="/it/gare" class="menu-link" id="races-button">Gare</a></li>
-				<li><a href="https://sportotime.com/eng/event/1171" target="_blank" rel="noopener noreferrer"
+				<li><a href="https://sportotime.com/ita/evento/1171" target="_blank" rel="noopener noreferrer"
 						class="menu-link">Iscrizioni</a></li>
 				<li><a href="/it/chi-siamo" class="menu-link">Chi siamo</a></li>
 				<li><a href="/it/contatti" class="menu-link">Contatti</a></li>
 				<li>
 					<a href="/sl/proge/goriski-tek" class="language-switch menu-link">SI</a>
 					<span>/</span>					
-					<a href="/en/races/goriski-tek" class="language-switch menu-link">EN</a>
+					<a href="/en/races/gorica-run" class="language-switch menu-link">EN</a>
 				</li>
 			</ul>
 		</div>
@@ -92,14 +92,14 @@
 				</ul>
 
 				<ul class="accordian top-padding">
-					<li>
+					<!-- <li>
 						<a class="toggle" href="javascript:void(0);">+ Track description</a>
 						<ul class="inner  top-padding">
 							<li>
 								<p>Race takes place on mostly flat terrain through Nova Gorica and Šempeter.</p>
 							</li>
 						</ul>
-					</li>
+					</li> -->
 
 					<li>
 						<a class="toggle" href="javascript:void(0);">+ Contatti</a>
@@ -112,7 +112,7 @@
 				</ul>
 
 				<div class="center top-padding">
-					<a href="https://sportotime.com/eng/event/1171" target="_blank" rel="noopener noreferrer"
+					<a href="https://sportotime.com/ita/evento/1171" target="_blank" rel="noopener noreferrer"
 						class="btn">ISCRIVITI</a>
 					<p class="top-padding">Guardare altre <a href="/it/gare">gare</a>.
 					</p>
