--- a/it/gare/index.html
+++ b/it/gare/index.html
@@ -44,7 +44,7 @@
 			<ul class="menu-content">
 				<li><a href="/it/informazioni" class="menu-link">Info</a></li>
 				<li><a href="/it/gare" class="menu-link" id="races-button">Gare</a></li>
-				<li><a href="https://sportotime.com/eng/event/1171" target="_blank" rel="noopener noreferrer"
+				<li><a href="https://sportotime.com/ita/evento/1171" target="_blank" rel="noopener noreferrer"
 						class="menu-link">Iscrizioni</a></li>
 				<li><a href="/it/chi-siamo" class="menu-link">Chi siamo</a></li>
 				<li><a href="/it/contatti" class="menu-link">Contatti</a></li>
