--- a/it/gare/ultra-58km.html
+++ b/it/gare/ultra-58km.html
@@ -44,7 +44,7 @@
 			<ul class="menu-content">
 				<li><a href="/it/informazioni" class="menu-link">Info</a></li>
 				<li><a href="/it/gare" class="menu-link" id="races-button">Gare</a></li>
-				<li><a href="https://sportotime.com/eng/event/1171" target="_blank" rel="noopener noreferrer"
+				<li><a href="https://sportotime.com/ita/evento/1171" target="_blank" rel="noopener noreferrer"
 						class="menu-link">Iscrizioni</a></li>
 				<li><a href="/it/chi-siamo" class="menu-link">Chi siamo</a></li>
 				<li><a href="/it/contatti" class="menu-link">Contatti</a></li>
@@ -178,7 +178,7 @@
 				</ul>
 
 				<div class="center top-padding">
-					<a href="https://sportotime.com/eng/race/3580/race_registration" target="_blank"
+					<a href="https://sportotime.com/ita/la_gara/3580/iscrizione_alla_gara" target="_blank"
 						rel="noopener noreferrer" class="btn">ISCRIVITI</a>
 					<p class="top-padding">Guardare altre <a href="/it/gare">gare</a>.
 					</p>
