--- a/it/index.html
+++ b/it/index.html
@@ -46,14 +46,14 @@
 			<ul class="menu-content">
 				<li><a href="informazioni" class="menu-link">Info</a></li>
 				<li><a href="/it/gare" class="menu-link" id="races-button">Gare</a></li>
-				<li><a href="https://sportotime.com/eng/event/1171" target="_blank" rel="noopener noreferrer"
+				<li><a href="https://sportotime.com/ita/evento/1171" target="_blank" rel="noopener noreferrer"
 						class="menu-link">Iscrizioni</a></li>
 				<li><a href="chi-siamo" class="menu-link">Chi siamo</a></li>
 				<li><a href="contatti" class="menu-link">Contatti</a></li>
 				<li>
 					<a href="/" class="language-switch menu-link">SI</a>
 					<span>/</span>					
-					<a href="/it" class="language-switch menu-link">EN</a>
+					<a href="/en" class="language-switch menu-link">EN</a>
 				</li>
 			</ul>
 		</div>
