--- a/it/informazioni.html
+++ b/it/informazioni.html
@@ -44,7 +44,7 @@
 			<ul class="menu-content">
 				<li><a href="informazioni" class="menu-link">Info</a></li>
 				<li><a href="gare" class="menu-link" id="races-button">Gare</a></li>
-				<li><a href="https://sportotime.com/eng/event/1171" target="_blank" rel="noopener noreferrer"
+				<li><a href="https://sportotime.com/ita/evento/1171" target="_blank" rel="noopener noreferrer"
 						class="menu-link">Iscrizioni</a></li>
 				<li><a href="chi-siamo" class="menu-link">Chi siamo</a></li>
 				<li><a href="contatti" class="menu-link">Contatti</a></li>
@@ -99,7 +99,7 @@
 					<li>
 						<a class="toggle" href="javascript:void(0);">Iscrizioni</a>
 						<ul class="inner  top-padding">
-							<p> Puoi iscriverti <a href="https://sportotime.com/eng/event/1171" target="_blank" rel="noopener noreferrer">qui</a>. La quota cambia in base al momento dell'iscrizione. I prezzi sono pubblicati sotto ogni gara.
+							<p> Puoi iscriverti <a href="https://sportotime.com/ita/evento/1171" target="_blank" rel="noopener noreferrer">qui</a>. La quota cambia in base al momento dell'iscrizione. I prezzi sono pubblicati sotto ogni gara.
 							</p>
 						</ul>
 					</li>
