--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 	<meta name="description"
 		content="Tek treh vrhov 2020 | 12km, 28km, 58km | tekaška preizkušnja med tremi vrhovi ob dolini reke Soče, 10. oktober 2020">
 	<meta property='og:title' content="Tek treh vrhov"/>
-	<meta property='og:image' content="../assets/images/showcase-1-m.jpg"/>
-	<meta property='og:url' content="//tektrehvrhov.si" />
+	<meta property='og:image' content="https://tektrehvrhov.si/assets/images/showcase-1-m.jpg"/>
+	<meta property='og:url' content="https://tektrehvrhov.si" />
 	<title>Tek treh vrhov 2020</title>
 	<!--Styles-->
 	<link rel="stylesheet" href="styles/main.css">
@@ -64,9 +64,9 @@
 	<!--Showcase image-->
 	<section id="showcase">
 		<div class="hero-image">
-			<img src="../assets/images/showcase-1-m.jpg" 
-				srcset="../assets/images/showcase-1-m.jpg 650w,
-				../assets/images/showcase-1.jpg 750w"
+			<img src="./assets/images/showcase-1-m.jpg" 
+				srcset="./assets/images/showcase-1-m.jpg 650w,
+				./assets/images/showcase-1.jpg 750w"
 				sizes="100vw"
 				alt="Tek treh vrhov - hero image">
 			<div class="text-wrap grid">
