add eng translation of general conditions

--- a/it/informazioni.html
+++ b/it/informazioni.html
@@ -131,38 +131,18 @@
 					<li>
 						<a class="toggle" href="javascript:void(0);">Regolamento</a>
 						<ul class="inner  top-padding">
-							<li>1. Udeleženci so nezgodno zavarovani pri Zavarovalnici Sava.</li>
-							<li>2. Tekači morajo biti vso pot na uradni progi. Odgovornost vsakega tekača je, da pozna
-								potek proge in je seznanjen z uradnimi označbami (zemljevidi so dosegljivi na spletni
-								strani). Udeleženci, ki se oddaljijo od uradne proge ali jo namerno krajšajo bodo
-								avtomatično diskvalificirani.</li>
-							<li>3. Na nekaterih delih trasa poteka po cestah, na katerih morate upoštevati veljavne
-								cestno prometne predpise in se obnašati kot predpisuje zakon za vse udeležence v
-								prometu.</li>
-							<li>4. Samo tekačem s Startno številko na vidnem mestu bo omogočen dostop do okrepčevalnice.
-								Hrano in pijačo je treba pojesti in popiti na mestu okrepčevalnice.</li>
-							<li>5. Uporaba smučarskih palic je dovoljena vsem tekačem! (Rule 251 that replaces Rule 251
-								(Mountain Gare) and Rule 252 (Trail Gare) of the IAAF Competition Rules (NEW Rule
-								approved by the IAAF Council in force from 1 January 2019))</li>
-							<li>6. Na določenih točkah bodo člani GRS in drugih medicinskih služb, ki bodo v stalnem
-								kontaktu z vodstvom tekme. Vzdolž trase na najbolj izpostavljenih mestih bodo
-								prostovoljci, ki bodo preverjali prisotnost udeležencev.</li>
-							<li>7. Udeleženci morajo upoštevati osnovna načela obnašanja v naravi in ne smejo puščati
-								odpadkov! Odpadke lahko odložijo na mestih, predvidenih za to. Udeleženec, ki tega
-								pravila ne bo upošteval in ga kontrola pri tem opazi, bo avtomatsko diskvalificiran. Vsi
-								energijski geli, tablice,čokoladice morajo biti označene s startno številko tekmovalca.
+							<li>1. Accident insurance for participants is arranged at Zavarovalnica Sava.</li>
+							<li>2. Runners must stay on the official route. Each runner should be familiar with the official route and markings (GPX files are available on this website). Runners that fail to stay on the route are automatically disqualified.</li>
+							<li>3. On few occasions the route follows a road. In these cases participants must follow road traffic regulations.</li>
+							<li>4. Refreshment stations are available only to the runners with a clearly visible race number. Food and drinks served at the refreshment station must be consumed on the spot.</li>
+							<li>5. Trekking poles can be used on all races. (Rule 251 that replaces Rule 251 (Mountain Races) and Rule 252 (Trail Races) of the IAAF Competition Rules (NEW Rule approved by the IAAF Council in force from 1 January 2019).)</li>
+							<li>6. Members of GRS and other medical staff will be present in certain areas. They will stay in touch with the organisers throughout the race. Volunteers will also be present along the route's more exposed sections.</li>
+							<li>7. Dropping waste on the route is forbidden outside of designated areas. Failing to do so results in a disqualification of the runner. All gels and food the runner carries must be marked with the runner's number.
 							</li>
-							<li>8. Tekmovanje se izvede v vseh vremenskih pogojih. Izjema so samo situacije, ko je lahko
-								ogrožena varnost udeležencev (izjemno neurje, naravna katastrofa itd.). V takem primeru
-								o odpovedi odloča vrhovna sodniška komisija. </li>
-							<li>9. Udeleženec se zaveda in se strinja, da je tovrstna aktivnost organizirana in vodena s
-								strani organizatorja in je opredeljena kot "ekstremen šport". Kot taka je podvržena
-								nevarnostim in tveganjem z vključujočimi poškodbami kot tudi smrti udeležencev.</li>
-							<li>10. Prostovoljna prijava na tekmo se razume kot strinjanje s pravili tekme in vseh
-								sprememb, ki jih mora organizator sproti po potrebi izvesti.</li>
-							<li>11. Zaradi izjemne zahtevnosti tekmovanja mlajši od 18 let ne morejo tekmovati na 28 in
-								58 km
-								razdalji.</li>
+							<li>8. The race will take place in all weather conditions. In extreme cases where the participants would be in danger due to the weather the organisers can call off the race. </li>
+							<li>9. The participant is aware and agrees with the organisers' decision to define the event as an "extreme sport". As such it involves certain dangers and risks that may involve injuries and death.</li>
+							<li>10. By voluntary enrolling the participants agrees with the rules of the race as well as any changes that the organiser may carry out.</li>
+							<li>11. Runners younger than 18 years cannot register for the 28km and 58km races.</li>
 						</ul>
 					</li>
 				</ul>
