--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 	<meta name="keywords" content="trail, tek, treh, vrhov, slovenija, sabotin, škabrijel, sveta gora">
 	<meta name="description"
 		content="Tek treh vrhov 2020 | 12km, 28km, 58km | tekaška preizkušnja med tremi vrhovi ob dolini reke Soče, 10. oktober 2020">
-	<meta property='og:title' content="Tek treh vrhov"/>
-	<meta property='og:image' content="https://tektrehvrhov.si/assets/images/showcase-1-m.jpg"/>
-	<meta property='og:url' content="https://tektrehvrhov.si" />
+	<meta property="og:title" content="Tek treh vrhov"/>
+	<meta property="og:image" content="https://tektrehvrhov.si/assets/images/showcase-1-m.jpg"/>
+	<meta property="og:url" content="https://tektrehvrhov.si" />
 	<title>Tek treh vrhov 2020</title>
 	<!--Styles-->
 	<link rel="stylesheet" href="styles/main.css">
